frontend/test/should_fail/array_005.grg
using array_model_001;

rule constAssignment {
	a:A;
	
	modify {
		eval {
			a.constStringArray = a.constStringArray \ array<string>{ "bla" };
		}
	}
}